chore(run.sh): add ZGC and memory settings